<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    android:layout_marginTop="6dp"
    android:layout_marginBottom="6dp"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="8dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/text_view_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registro_data"
            android:textColor="@color/text_dark"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_view_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textColor="@color/text_dark"
            android:text="@string/registro_hora"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/text_view_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textColor="@color/text_dark"
            android:alpha="0.8"
            android:text="@string/registro_local"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/text_view_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:textColor="@color/text_dark"
            android:alpha="0.8"
            android:text="@string/registro_status"
            android:textSize="15sp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>