<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_gray">

    <TextView
        android:id="@+id/txt_titulo_historico_tela"
        style="@style/telaTitulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/title_historico"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_historico"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:clipToPadding="false"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        app:layout_constraintTop_toBottomOf="@id/txt_titulo_historico_tela"
        app:layout_constraintBottom_toTopOf="@id/container_botoes_historico"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:listitem="@layout/item_historico" />

    <LinearLayout
        android:id="@+id/container_botoes_historico"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:background="@color/background_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button
            android:id="@+id/btn_limpar_historico"
            style="@style/btnPattern"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/limpeza_historico" />

        <Button
            android:id="@+id/btn_voltar_historico"
            style="@style/btnOutlinedPattern"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/voltar_historico" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>